feat: add githb search repositories feature

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   "files.watcherExclude": {
     "**/.fvm": true
   },
-  "dart.runPubGetOnPubspecChanges": "never"
+  "dart.runPubGetOnPubspecChanges": "never",
+  "dart.lineLength": 80
 }
