--- a/.vscode/launch.base.json
+++ b/.vscode/launch.base.json
@@ -6,7 +6,10 @@
       "program": "lib/main.dart",
       "request": "launch",
       "type": "dart",
-      "args": ["--debug"]
+      "args": [
+        "--debug",
+        "--dart-define=GITHUB_ACCESS_TOKEN=<YOUR-GITHUB-ACCESS-TOKEN-HERE>"
+      ]
     }
   ]
 }
