--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,10 @@ environment:
   sdk: '>=2.18.2 <3.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
